--- a/styles.css
+++ b/styles.css
@@ -8,14 +8,24 @@
   --lighter-gray:#aaaaaa;
   --black: #2c2c2c;
 
-  --border-radius: 4px;
+  --border-radius: 8px;
+  --font-size-label: 0.625rem;
+}
+
+@font-face {
+    font-family: 'Inter';
+    src: url('fonts/Inter-VariableFont_opsz,wght.woff2') format('woff2');
+    font-weight: 100 900;
+    font-style: normal;
+    font-display: swap;
 }
 
 html {
   color: var(--white);
   background:var(--light-green);
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: 'Inter', Helvetica, Arial, sans-serif;
 }
+
 body {
   margin: 0;
 }
@@ -74,4 +84,26 @@ aside img {
 
 ::-webkit-scrollbar-thumb:active {
   background:var(--lighter-gray);
+}
+
+.input-primary{
+  width: 30%;
+  padding: 0.5rem;
+  margin: 0.2rem;
+  box-sizing: border-box;
+  border: 1px solid var(--gray);
+  border-radius: var(--border-radius);
+  background-color: var(--white);
+  color: var(--black);
+}
+
+.input-container{
+  padding-bottom: 1rem;
+  display: flex;
+  flex-direction: column;
+}
+
+label{
+  color: var(--black);
+  padding-bottom: 0.2rem;
 }
