--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@
   --font-size-p-small:0.75rem;
   --font-size-label: 0.875rem;
   --font-size-button-M: 1rem;
+  --font-size-h2: 2rem;
 }
 
 @font-face {
@@ -137,4 +138,9 @@ label{
   color: var(--dark-green);
   cursor: pointer;
   text-decoration: underline;
+}
+
+h2{
+  font-size: var(--font-size-h2);
+  color: var(--black);
 }
