--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 :root{
   --white: #ffffff;
   --dark-green: #3B623F;
+  --dark-green-secondary:#2D4B30;
   --light-green: #F8FAF2;
   --gray: #b6b6b6;
   --gray-secondary: #777777;
@@ -90,7 +91,7 @@ aside img {
 }
 
 .input-primary{
-  width: 30%;
+    width:40vw;
   padding: 0.5rem;
   margin: 0.2rem;
   box-sizing: border-box;
@@ -112,12 +113,16 @@ label{
 }
 
 .button-primary{
-  width:40%;
+  width:40vw;
   border: none;
   border-radius: var(--border-radius);
   background-color: var(--dark-green);
   color: var(--light-green);
   cursor: pointer;
+}
+
+.button-primary:hover{
+  background-color: var(--dark-green-secondary);
 }
 
 .M{
@@ -144,3 +149,15 @@ h2{
   font-size: var(--font-size-h2);
   color: var(--black);
 }
+
+.login-section {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
