--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,9 @@ aside {
   top: 0;
   left: 0;
   height: 100vh;
-  width: 300px;
+  width: 30%;
+  min-width: 150px;
+  max-width: 300px;
   border-right: 1px solid var(--gray);
   z-index: 10000;
 }
