--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,12 @@ body {
   margin: 0;
 }
 
+h1{
+  font-size: var(--font-size-h2);
+  color: var(--darker-gray);
+  margin-top: 3rem;
+}
+
 h3{
   font-size: var(--font-size-h3);
   color: var(--darker-gray);
