--- a/styles.css
+++ b/styles.css
@@ -102,7 +102,7 @@ small{
 }
 
 main {
-  margin-left: clamp(150px, 30%, 300px);
+  margin-left:200px;
   padding: 1rem;
 }
 aside {
@@ -110,9 +110,7 @@ aside {
   top: 0;
   left: 0;
   height: 100vh;
-  width: 30%;
-  min-width: 150px;
-  max-width: 300px;
+  width: 200px;
   border-right: 1px solid var(--gray);
   z-index: 10000;
 }
@@ -121,6 +119,19 @@ aside img {
   margin-top: 7vh;
   margin-left: 2vw;
 }
+
+.pie-chart {
+  width: 50%;
+  max-width: 250px;
+  min-width: 150px;
+  aspect-ratio: 1 / 1;
+}
+
+.complete-tasks-section{
+  width:100%;
+}
+
+
 ::-webkit-scrollbar {
   width: 8px;
   height: 8px;
