add buttons,styles and weekHeader

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
   --darker-gray:#555555;
   --lighter-gray:#aaaaaa;
   --black: #2c2c2c;
-  --yellow-primary: #FFC107;
+  --yellow-primary: #F6D47F;
   --yellow-lighter: #FFD54F;
 
   --border-radius: 8px;
