--- a/calendar.css
+++ b/calendar.css
@@ -38,25 +38,40 @@ border: 1px solid var(--light-green-secondary);
 }
 
 .time-column{
-    border-radius: var(--border-radius);
+    border-top-left-radius: var(--border-radius);
 }
 
-.current-hour-line{
+.week-navigation, .calendar-options{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
+}
+
+.calendar-options{
+    margin-bottom: 1rem;
+    justify-content: space-between;
+}
+
+.current-hour-line {
     position: absolute;
-    left: 0; /* ignora coluna de horas */
+    left: 0;
     right: 0;
     height: 2px;
     background-color: var(--warning-red);
     z-index: 10;
+    pointer-events: none;
 }
+
 .current-hour-line::after {
     content: "";
     position: absolute;
-    left: 0;
+    left: -6px;
     top: 50%;
     transform: translateY(-50%);
     width: 12px;
     height: 12px;
     border-radius: 50%;
-    background-color: red;
+    background-color: var(--warning-red);
 }
