--- a/calendar.css
+++ b/calendar.css
@@ -36,13 +36,6 @@
     padding: 5px;
 }
 
-
-.day.today {
-    background-color: #007bff;
-    color: white;
-    font-weight: bold;
-}
-
 .calendar-header{
     color:var(--darker-gray);
     border: 1px solid var(--light-green-secondary);
@@ -122,4 +115,64 @@ border: 1px solid var(--light-green-secondary);
 
 .event-text {
     padding: 0;
+}
+
+.modal-overlay {
+    position: fixed;
+    inset: 0;
+    background: rgba(0, 0, 0, 0.4);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+}
+
+.modal {
+    background-color: var(--light-green);
+    border-radius: var(--border-radius);
+    width: 40%;
+    max-width: 70%;
+}
+
+.modal-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 1rem;
+}
+
+.modal-content {
+    padding: 1rem;
+}
+
+.modal-close {
+    background: none;
+    border: none;
+    font-size: 1.5rem;
+    cursor: pointer;
+}
+
+.datetime-container{
+    width:100%;
+    display: flex;
+    flex-direction: row;
+    gap:1rem;
+}
+
+.datetime-input{
+    width:100%;
+}
+
+.modal-form-group{
+    display: flex;
+    flex-direction: column;
+    gap:0.75rem;
+    margin:1rem 1rem;
+}
+
+.checkbox {
+    width: 15px;
+    height: 15px;
+    accent-color: var(--dark-green);
+    cursor: pointer;
 }
